const path = require('path');
const { globSync } = require('glob');

const lintAsync = require('./tools/lintAsync');

const configFile = path.resolve(__dirname, '../shared/typescript-analysis.js');

it(`has a valid typescript analysis config`, async () => {
  const results = await lintAsync(configFile, ['fixtures/all-00.js']);
  expect(results).toBeDefined();
}, 20000);

it(`lints with the typescript-analysis config`, async () => {
  const files = globSync(path.resolve(__dirname, 'fixtures/typescript-analysis-*'));
  const results = await lintAsync(configFile, files);
  for (const result of results) {
    const relativeFilePath = path.relative(__dirname, result.filePath);
    delete result.filePath;
    expect(result).toMatchSnapshot(relativeFilePath);
  }
}, 20000);
